--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "sveltekit",
+	"name": "nursing-workforce",
 	"version": "0.0.1",
 	"scripts": {
 		"dev": "svelte-kit dev",
@@ -20,7 +20,6 @@
 		"d3-format": "^1.4.3",
 		"d3-geo": "^1.11.9",
 		"d3-interpolate": "^1.4.0",
-		"d3-regression": "^1.3.4",
 		"d3-scale": "^3.2.1",
 		"d3-scale-chromatic": "^1.5.0",
 		"d3-shape": "^1.3.7",
